Modify home for click

--- a/home.html
+++ b/home.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title>Badminton-shooter</title>
+  <style>circle{fill:#f4f47d}g:hover{cursor:pointer}g:hover circle{fill:#3399ff}text{font-size:7px;font-family:Calibri}rect{fill:#47a33d}path{fill:none}rect,path{stroke:#000}</style>
 </head>
-
 <body>
   <h1>Badminton-shooter</h1>
   <p>Press the button to turn on or off the led</p>
@@ -18,6 +17,43 @@
   <br>
   <hr>
   <h1>Court</h1>
-  <div><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 240 240"><defs><style>.a{fill:#47a33d;}.b{fill:none;stroke:#000;stroke-miterlimit:10;}.c{fill:#f4f47d;}.d{font-size:7px;font-family:Calibri, Calibri;}</style></defs><title>court</title><path d="M249,11V249H11V11H249m1-1H10V250H250V10Z" transform="translate(-10 -10)"/><rect class="a" x="20.5" y="0.5" width="199" height="219"/><path d="M229,11V229H31V11H229m1-1H30V230H230V10Z" transform="translate(-10 -10)"/><path d="M229,76V204H31V76H229m1-1H30V205H230V75Z" transform="translate(-10 -10)"/><path d="M214,11V229H46V11H214m1-1H45V230H215V10Z" transform="translate(-10 -10)"/><rect class="b" x="20.5" y="65.5" width="99" height="154"/><circle class="c" cx="204" cy="208" r="7"/><text class="d" transform="translate(200.03 210.26) scale(1.12 1)">49</text><circle class="c" cx="176" cy="208" r="7"/><text class="d" transform="translate(172.03 210.26) scale(1.12 1)">48</text><circle class="c" cx="148" cy="208" r="7"/><text class="d" transform="translate(144.03 210.26) scale(1.12 1)">47</text><circle class="c" cx="120" cy="208" r="7"/><text class="d" transform="translate(116.03 210.26) scale(1.12 1)">46</text><circle class="c" cx="92" cy="208" r="7"/><text class="d" transform="translate(88.03 210.26) scale(1.12 1)">45</text><circle class="c" cx="64" cy="208" r="7"/><text class="d" transform="translate(60.03 210.26) scale(1.12 1)">44</text><circle class="c" cx="36" cy="208" r="7"/><text class="d" transform="translate(32.03 210.26) scale(1.12 1)">43</text><circle class="c" cx="205" cy="176" r="7"/><text class="d" transform="translate(201.03 178.26) scale(1.12 1)">42</text><circle class="c" cx="176" cy="176" r="7"/><text class="d" transform="translate(172.03 178.26) scale(1.12 1)">41</text><circle class="c" cx="148" cy="176" r="7"/><text class="d" transform="translate(144.03 178.26) scale(1.12 1)">40</text><circle class="c" cx="120" cy="176" r="7"/><text class="d" transform="translate(116.03 178.26) scale(1.12 1)">39</text><circle class="c" cx="92" cy="176" r="7"/><text class="d" transform="translate(88.03 178.26) scale(1.12 1)">38</text><circle class="c" cx="64" cy="176" r="7"/><text class="d" transform="translate(60.03 178.26) scale(1.12 1)">37</text><circle class="c" cx="36" cy="176" r="7"/><text class="d" transform="translate(32.03 178.26) scale(1.12 1)">36</text><circle class="c" cx="205" cy="144" r="7"/><text class="d" transform="translate(201.03 146.26) scale(1.12 1)">35</text><circle class="c" cx="176" cy="144" r="7"/><text class="d" transform="translate(172.03 146.26) scale(1.12 1)">34</text><circle class="c" cx="148" cy="144" r="7"/><text class="d" transform="translate(144.03 146.26) scale(1.12 1)">33</text><circle class="c" cx="120" cy="144" r="7"/><text class="d" transform="translate(116.03 146.26) scale(1.12 1)">32</text><circle class="c" cx="92" cy="144" r="7"/><text class="d" transform="translate(88.03 146.26) scale(1.12 1)">31</text><circle class="c" cx="64" cy="144" r="7"/><text class="d" transform="translate(60.03 146.26) scale(1.12 1)">30</text><circle class="c" cx="36" cy="144" r="7"/><text class="d" transform="translate(32.03 146.26) scale(1.12 1)">29</text><circle class="c" cx="204" cy="112" r="7"/><text class="d" transform="translate(200.03 114.26) scale(1.12 1)">28</text><circle class="c" cx="176" cy="112" r="7"/><text class="d" transform="translate(172.03 114.26) scale(1.12 1)">27</text><circle class="c" cx="148" cy="112" r="7"/><text class="d" transform="translate(144.03 114.26) scale(1.12 1)">26</text><circle class="c" cx="120" cy="112" r="7"/><text class="d" transform="translate(116.03 114.26) scale(1.12 1)">25</text><circle class="c" cx="92" cy="112" r="7"/><text class="d" transform="translate(88.03 114.26) scale(1.12 1)">24</text><circle class="c" cx="64" cy="112" r="7"/><text class="d" transform="translate(60.03 114.26) scale(1.12 1)">23</text><circle class="c" cx="35" cy="112" r="7"/><text class="d" transform="translate(31.03 114.26) scale(1.12 1)">22</text><circle class="c" cx="204" cy="80" r="7"/><text class="d" transform="translate(200.03 82.26) scale(1.12 1)">21</text><circle class="c" cx="176" cy="80" r="7"/><text class="d" transform="translate(172.03 82.26) scale(1.12 1)">20</text><circle class="c" cx="148" cy="80" r="7"/><text class="d" transform="translate(144.03 82.26) scale(1.12 1)">19</text><circle class="c" cx="120" cy="80" r="7"/><text class="d" transform="translate(116.03 82.26) scale(1.12 1)">18</text><circle class="c" cx="92" cy="80" r="7"/><text class="d" transform="translate(88.03 82.26) scale(1.12 1)">17</text><circle class="c" cx="64" cy="80" r="7"/><text class="d" transform="translate(60.03 82.26) scale(1.12 1)">16</text><circle class="c" cx="36" cy="80" r="7"/><text class="d" transform="translate(32.03 82.26) scale(1.12 1)">15</text><circle class="c" cx="204" cy="48" r="7"/><text class="d" transform="translate(200.03 50.26) scale(1.12 1)">14</text><circle class="c" cx="176" cy="48" r="7"/><text class="d" transform="translate(172.03 50.26) scale(1.12 1)">13</text><circle class="c" cx="148" cy="48" r="7"/><text class="d" transform="translate(144.03 50.26) scale(1.12 1)">12</text><circle class="c" cx="120" cy="48" r="7"/><text class="d" transform="translate(116.03 50.26) scale(1.12 1)">11</text><circle class="c" cx="92" cy="48" r="7"/><text class="d" transform="translate(88.03 50.26) scale(1.12 1)">10</text><circle class="c" cx="64" cy="48" r="7"/><text class="d" transform="translate(62.02 50.26) scale(1.12 1)">9</text><circle class="c" cx="36" cy="48" r="7"/><text class="d" transform="translate(34.02 50.26) scale(1.12 1)">8</text><circle class="c" cx="204" cy="16" r="7"/><text class="d" transform="translate(202.02 18.26) scale(1.12 1)">7</text><circle class="c" cx="176" cy="16" r="7"/><text class="d" transform="translate(174.02 18.26) scale(1.12 1)">6</text><circle class="c" cx="148" cy="16" r="7"/><text class="d" transform="translate(146.02 18.26) scale(1.12 1)">5</text><circle class="c" cx="120" cy="16" r="7"/><text class="d" transform="translate(118.02 18.26) scale(1.12 1)">4</text><circle class="c" cx="92" cy="16" r="7"/><text class="d" transform="translate(90.02 18.26) scale(1.12 1)">3</text><circle class="c" cx="64" cy="16" r="7"/><text class="d" transform="translate(62.02 18.26) scale(1.12 1)">2</text><circle class="c" cx="36" cy="16" r="7"/><text class="d" transform="translate(34.02 18.26) scale(1.12 1)">1</text></svg></div>
+  <svg id="court" viewBox="0 0 240 240" style="width:50%"><rect x="20.5" y="0.5" width="199" height="219"/><path d="M0,0H240V240H0V0m35,0V220m85,0V65m85,155V0m15,65H20m0,130h200"/></svg></div>
+  <script>
+    const xCourtPos = 36;
+    const yCourtPos = 16;
+    const xCourtOffset = 28;
+    const yCourtOffset = 32;
+    const xFigOffset1 = 1.98;
+    const xFigOffset2 = 3.97;
+    const yFigOffset = 2.26;
+    const cons = (e) => {
+      console.log(e.currentTarget.id);
+      const g = document.getElementById(e.currentTarget.id);
+      g.fn = g.fn === 'init' ? 'pass' : 'init';
+      console.log(e.currentTarget.fn);
+    }
+    function courtLoad(fn) {
+      if (document.readyState === "complete" || document.readyState === "interactive") {
+        setTimeout(fn, 1);
+      } else {
+        document.addEventListener("DOMContentLoaded", fn);
+      }
+    }
+    courtLoad(function () {
+      const svg = document.getElementById('court');
+      for (let i = 0; i < 7; ++i) {
+        for (let j = 0; j < 7; ++j) {
+          const id = 7 * j + i + 1;
+          const xFigOffset = id < 10 ? xFigOffset1 : xFigOffset2;
+          const g = document.createElementNS('http://www.w3.org/2000/svg', "g");
+          g.addEventListener('click', cons);
+          g.id = `g-${id}`;
+          g.fn = 'init';
+          g.innerHTML = `<circle cx="${xCourtPos + xCourtOffset * i}" cy="${yCourtPos + yCourtOffset * j}" r="7"></circle><text transform="translate(${xCourtPos + xCourtOffset * i - xFigOffset} ${yCourtPos + yCourtOffset * j + yFigOffset}) scale(1.12 1)">${id}</text>`;
+          svg.appendChild(g);
+        }
+      }
+    });
+  </script>
 </body>
 </html>
